// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code output renders correctly 1`] = `
<Blueprint5.Card
  elevation={0}
  interactive={false}
>
  <ForwardRef
    className="code-output"
  >
    display('');
  </ForwardRef>
</Blueprint5.Card>
`;

exports[`Empty output renders an empty card 1`] = `
<Blueprint5.Card
  elevation={0}
  interactive={false}
>
  ''
</Blueprint5.Card>
`;

exports[`Error output (no consoleLogs) renders correctly 1`] = `
<Blueprint5.Card
  elevation={0}
  interactive={false}
>
  <ForwardRef
    className="error-output"
  >
    Expected , got .
  </ForwardRef>
</Blueprint5.Card>
`;

exports[`Error output (with consoleLogs) renders correctly 1`] = `
<Blueprint5.Card
  elevation={0}
  interactive={false}
>
  <ForwardRef
    className="log-output"
  >
    a
bb
cccccccccccccccccccccccccccccccc
d
  </ForwardRef>
  <br />
  <ForwardRef
    className="error-output"
  >
    Expected , got .
  </ForwardRef>
</Blueprint5.Card>
`;

exports[`Repl renders correctly 1`] = `
<div
  className="Repl"
  style={
    Object {
      "display": undefined,
    }
  }
>
  <div
    className="repl-output-parent"
  >
    <Output
      isHtml={false}
      output={
        Object {
          "consoleLogs": Array [],
          "type": "result",
          "value": 42,
        }
      }
      usingSubst={false}
    />
    <Output
      isHtml={false}
      output={
        Object {
          "type": "code",
          "value": "display('');",
        }
      }
      usingSubst={false}
    />
    <Output
      isHtml={false}
      output={
        Object {
          "consoleLogs": Array [],
          "errors": Array [
            TypeError {
              "chapter": 4,
              "expected": "",
              "got": "",
              "location": Object {
                "end": Object {
                  "column": -1,
                  "line": -1,
                },
                "start": Object {
                  "column": -1,
                  "line": -1,
                },
              },
              "severity": "Error",
              "side": "",
              "type": "Runtime",
            },
          ],
          "type": "errors",
        }
      }
      usingSubst={false}
    />
    <Output
      isHtml={false}
      output={
        Object {
          "consoleLogs": Array [
            "a",
            "bb",
            "cccccccccccccccccccccccccccccccc",
            "d",
          ],
          "type": "running",
        }
      }
      usingSubst={false}
    />
    <Blueprint5.Card
      className="repl-input-parent row"
      elevation={0}
      interactive={false}
    >
      <ReplInput
        externalLibrary="NONE"
        handleBrowseHistoryDown={[Function]}
        handleBrowseHistoryUp={[Function]}
        handleReplEval={[Function]}
        handleReplOutputClear={[Function]}
        handleReplValueChange={[Function]}
        output={
          Array [
            Object {
              "consoleLogs": Array [],
              "type": "result",
              "value": 42,
            },
            Object {
              "type": "code",
              "value": "display('');",
            },
            Object {
              "consoleLogs": Array [],
              "errors": Array [
                TypeError {
                  "chapter": 4,
                  "expected": "",
                  "got": "",
                  "location": Object {
                    "end": Object {
                      "column": -1,
                      "line": -1,
                    },
                    "start": Object {
                      "column": -1,
                      "line": -1,
                    },
                  },
                  "severity": "Error",
                  "side": "",
                  "type": "Runtime",
                },
              ],
              "type": "errors",
            },
            Object {
              "consoleLogs": Array [
                "a",
                "bb",
                "cccccccccccccccccccccccccccccccc",
                "d",
              ],
              "type": "running",
            },
          ]
        }
        replButtons={Array []}
        replValue=""
        sourceChapter={1}
        sourceVariant="default"
      />
    </Blueprint5.Card>
  </div>
</div>
`;

exports[`Result output (no consoleLogs) renders correctly 1`] = `
<Blueprint5.Card
  elevation={0}
  interactive={false}
>
  <ForwardRef
    className="result-output"
  >
    42
  </ForwardRef>
</Blueprint5.Card>
`;

exports[`Result output (with consoleLogs) renders correctly 1`] = `
<Blueprint5.Card
  elevation={0}
  interactive={false}
>
  <ForwardRef
    className="log-output"
  >
    a
bb
cccccccccccccccccccccccccccccccc
d
  </ForwardRef>
  <ForwardRef
    className="result-output"
  >
    42
  </ForwardRef>
</Blueprint5.Card>
`;

exports[`Running output renders correctly 1`] = `
<Blueprint5.Card
  elevation={0}
  interactive={false}
>
  <ForwardRef
    className="log-output"
  >
    a
bb
cccccccccccccccccccccccccccccccc
d
  </ForwardRef>
</Blueprint5.Card>
`;
